[gd_scene load_steps=6 format=3 uid="uid://de4i7kfhloml1"]

[ext_resource type="Texture2D" uid="uid://dc7qdbkqd7i10" path="res://img/fondos/escenario.png" id="1_6ba58"]
[ext_resource type="Script" uid="uid://d05s02fx6deb3" path="res://script/mundo.gd" id="1_aou4a"]
[ext_resource type="PackedScene" uid="uid://ct8xfdtux0do6" path="res://hud.tscn" id="2_fw4w5"]
[ext_resource type="PackedScene" uid="uid://cy8q211j3pln5" path="res://personaje.tscn" id="3_otwa2"]
[ext_resource type="PackedScene" uid="uid://dld6dva0lpi30" path="res://pantalla_final.tscn" id="5_5ckkb"]

[node name="Mundo" type="Node2D"]
script = ExtResource("1_aou4a")

[node name="Fondo" type="Sprite2D" parent="."]
position = Vector2(240, 360)
scale = Vector2(1.00209, 1)
texture = ExtResource("1_6ba58")

[node name="HUD" parent="." instance=ExtResource("2_fw4w5")]

[node name="Personaje" parent="." instance=ExtResource("3_otwa2")]
position = Vector2(150, 544)

[node name="TimerJuego" type="Timer" parent="."]

[node name="TimerSpawn" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="ContenedorMoscos" type="Node2D" parent="."]

[node name="PantallaFinal" parent="." instance=ExtResource("5_5ckkb")]
visible = false

[connection signal="timeout" from="TimerJuego" to="." method="_on_timer_juego_timeout"]
[connection signal="timeout" from="TimerSpawn" to="." method="_on_timer_spawn_timeout"]
